<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>br.net.mirante</groupId>
    <artifactId>singular</artifactId>

    <version>0.6.3-SNAPSHOT</version>
    <name>[projeto-raiz :: singular]</name>
    <packaging>pom</packaging>

    <modules>
        <module>flow</module>
        <module>form</module>
        <module>lib</module>
        <module>resources</module>
        <module>studio</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>singular-releases</id>
            <name>singular-releases</name>
            <url>http://nexus.mirante.net.br/nexus/content/repositories/singular-releases</url>
        </repository>
        <snapshotRepository>
            <id>singular-snapshots</id>
            <name>singular-snapshots</name>
            <url>http://nexus.mirante.net.br/nexus/content/repositories/singular-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <!--suppress MavenModelInspection -->
                            <Implementation-Build>${project.version}.${buildNumber} | ${timestamp}</Implementation-Build>
                            <!--suppress MavenModelInspection -->
                            <Revision-Id>${revisionNumber}</Revision-Id>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalparam>"-Xdoclint:none"</additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>none</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <shortRevisionLength>7</shortRevisionLength>
                    <buildNumberPropertyName>revisionNumber</buildNumberPropertyName>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Apache Commons API -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.2</version>
        </dependency>

        <!-- Joda Time API -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.9.1</version>
        </dependency>

        <!-- Google API's -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.13</version>
        </dependency>


        <!-- Tests -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-assert-core</artifactId>
            <version>2.0M10</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <scm>
        <url>${project.scm.url}</url>
        <connection>${project.scm.connection}</connection>
        <developerConnection>${project.scm.developerConnection}</developerConnection>
    </scm>

    <profiles>
        <profile>
            <id>test</id>
            <activation>
                <property>
                    <name>UNIT_TEST</name>
                    <value>TRUE</value>
                </property>
            </activation>
            <properties>
                <skipTests>false</skipTests>
            </properties>
        </profile>
    </profiles>

    <properties>
        <project.scm.url>http://10.0.0.22/r/MIRANTE/singular.git</project.scm.url>
        <project.scm.connection>scm:git:http://10.0.0.22/r/MIRANTE/singular.git</project.scm.connection>
        <project.scm.developerConnection>scm:git:http://10.0.0.22/r/MIRANTE/singular.git</project.scm.developerConnection>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>
        <skipTests>false</skipTests>
        <singular.version>0.6.3-SNAPSHOT</singular.version>
        <spring.version>4.2.4.RELEASE</spring.version>
        <spring.security.version>4.0.3.RELEASE</spring.security.version>
        <wicket.version>7.1.0</wicket.version>
        <hibernate.version>4.3.11.Final</hibernate.version>
    </properties>

</project>
